# ssrapid-desktop-service-v2

./: Cargo.toml  README.md
.github/build-for-linux/: build.sh
.github/workflows/: release.yml
src/: install.rs  io.github.clashverge.helper.plist  systemd_service_unit.tmpl  uninstall.rs  utils.rs
src/files/: info.plist.tmpl  io.github.clashverge.helper.plist  launchd.plist.tmpl  systemd_service_unit.tmpl
src/service/: core.rs  data.rs  mod.rs  process.rs  web.rs
