[package]
name = "clash-verge-service"
version = "0.1.0"
edition = "2021"
authors = ["zzzgydi", "Clash Verge Rev Team"]
license = "GPL-3.0"
repository = "https://github.com/zzzgydi/clash-verge-service.git"

[[bin]]
name = "clash-verge-service"
path = "src/main.rs"

[[bin]]
name = "install-service"
path = "src/install.rs"

[[bin]]
name = "uninstall-service"
path = "src/uninstall.rs"

[dependencies]
warp = "0.3"
anyhow = "1.0.95"
log = "0.4.25"
log4rs = "1.3"
once_cell = "1.20.3"
serde_json = "1.0.138"
parking_lot = "0.12"
windows-service = "0.7.0"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
sysinfo = "0.33.1"
nix = "0.25.1"
libc = "0.2.169"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.71", features = ["vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
interfaces = "0.0.9"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"